Fix: Getting AI response successfully and pdf generation successfull.