@@ -1,5 +1,6 @@
 package com.medmuse.medmuse_backend.service;
 
+import com.itextpdf.text.DocumentException;
 import com.medmuse.medmuse_backend.dto.*;
 import com.medmuse.medmuse_backend.entity.Report;
 import com.medmuse.medmuse_backend.entity.User;
@@ -9,47 +10,43 @@ import com.medmuse.medmuse_backend.repository.SymptomEntryRepository;
 import com.medmuse.medmuse_backend.repository.UserRepository;
 import com.medmuse.medmuse_backend.service.ai.AIServiceInterface;
 import com.medmuse.medmuse_backend.service.interfaces.ReportServiceInterface;
+
+import jakarta.transaction.Transactional;
+
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
+import java.io.IOException;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
+import java.util.stream.Collectors;
 
 @Service
+@Transactional
 public class ReportService implements ReportServiceInterface {
 
     private final AIServiceInterface aiService;
     private final ReportRepository reportRepository;
     private final UserRepository userRepository;
     private final SymptomEntryRepository symptomEntryRepository;
-
-    private final ExecutorService executor = Executors.newCachedThreadPool();
+    private final PdfService pdfService;
 
     public ReportService(AIServiceInterface aiService,
             ReportRepository reportRepository,
             UserRepository userRepository,
-            SymptomEntryRepository symptomEntryRepository) {
+            SymptomEntryRepository symptomEntryRepository,
+            PdfService pdfService) {
         this.aiService = aiService;
         this.reportRepository = reportRepository;
         this.userRepository = userRepository;
         this.symptomEntryRepository = symptomEntryRepository;
+        this.pdfService = pdfService;
     }
 
     @Override
-    public ReportDto generateWeeklyReport(Long userId) {
-        LocalDate endDate = LocalDate.now();
-        LocalDate startDate = endDate.minusWeeks(1);
-
-        return generateReportForPeriod(userId, startDate, endDate);
-    }
-
-    @Override
-    public ReportDto generateReportForPeriod(Long userId, LocalDate startDate, LocalDate endDate) {
-        // Fetch user and demographics
+    public ReportDto generateReportForPeriod(Long userId, LocalDate startDate, LocalDate endDate) throws DocumentException, IOException {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("User not found with id " + userId));
 
@@ -63,7 +60,6 @@ public class ReportService implements ReportServiceInterface {
                 .stream().map(SymptomEntryDto::new).toList();
 
         HealthAnalysisRequest request = new HealthAnalysisRequest(userId, demo, startDate, endDate, symptomDtos);
-
         HealthAnalysisResponse response = aiService.analyzeHealthData(request);
 
         System.out.println("AI Analysis Response: " + response);
@@ -76,51 +72,43 @@ public class ReportService implements ReportServiceInterface {
         report.setHealthSummary(response.getHealthSummary());
         report.setRiskAreas(response.getRiskAreas());
         report.setRecommendations(response.getRecommendations());
+        report = reportRepository.save(report);
+
+        String documentPath = pdfService.generatePdf(report);
+
+        report.setPdfPath(documentPath);
 
         Report saved = reportRepository.save(report);
         return new ReportDto(saved);
     }
 
-    private ReportDto buildAndSaveReport(User user, LocalDate startDate, LocalDate endDate, HealthAnalysisResponse analysis) {
-        try {
-            Report report = new Report();
-            report.setUser(user);
-            report.setWeekStartDate(startDate);
-            report.setWeekEndDate(endDate);
-            report.setGeneratedAt(LocalDateTime.now());
-            report.setHealthSummary(analysis.getHealthSummary());
-            report.setRiskAreas(analysis.getRiskAreas());
-            report.setRecommendations(analysis.getRecommendations());
+    @Override
+    public ReportDto generateWeeklyReport(Long id) throws DocumentException, IOException {
+        LocalDate endDate = LocalDate.now();
+        LocalDate startDate = endDate.minusDays(6);
 
-            // Save report to get ID
-            Report saved = reportRepository.save(report);
-
-            return new ReportDto(saved);
-
-        } catch (Exception e) {
-            System.out.println("Failed to build and save report for user {}");
-            throw new RuntimeException("Report generation failed", e);
-        }
+        return generateReportForPeriod(id, startDate, endDate);
     }
 
     @Override
-    public List<ReportDto> getUserReports(Long userId) {
-        return reportRepository.findByUserId(userId)
+    public List<ReportDto> getUserReports(Long id) {
+        return reportRepository.findByUserIdOrderByGeneratedAtDesc(id)
                 .stream()
                 .map(ReportDto::new)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    public Page<ReportDto> getUserReports(Long userId, Pageable pageable) {
-        return reportRepository.findByUserId(userId, pageable)
+    public Page<ReportDto> getUserReports(Long id, Pageable pageable) {
+        return reportRepository.findByUserIdOrderByGeneratedAtDesc(id, pageable)
                 .map(ReportDto::new);
     }
 
     @Override
-    public ReportDto getReportById(Long userId, Long reportId) {
-        return reportRepository.findByIdAndUserId(reportId, userId)
-                .map(ReportDto::new)
-                .orElseThrow(() -> new RuntimeException("Report not found"));
+    public ReportDto getReportById(Long id, Long reportId) {
+        Report report = reportRepository.findByIdAndUserId(reportId, id)
+                .orElseThrow(() -> new RuntimeException("Report not found: " + reportId));
+
+        return new ReportDto(report);
     }
 }
